--- a/src/styles/components/mobile/navbar.scss
+++ b/src/styles/components/mobile/navbar.scss
@@ -24,5 +24,4 @@
   top: 0;
   padding: 0 10px;
   justify-content: flex-end;
-  border: 1px solid red;
 }
